Add custom minimap BG image, tweaks for playerlist

--- a/default_minimap.html
+++ b/default_minimap.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container_free">
       <div class="minimap_container">
-        <img class="minimap_image" src="./img/minimap_raw.png" />
+        <img class="minimap_image" src="./img/EML_minimap_raw.png" />
         <div class="player blue positionable_element">
           <div></div>
           <p class="player_number">00</p>
